# Parallel-Counting-Sort--MPI--OpenMP--and-CUDA-Implementation

./: .gitattributes  README.md
src/CUDA_counting_sort/: CommonAssignmentCUDA.ipynb  CountingSort_Global.cu  CountingSort_Shared.cu  CountingSort_Shared_Texture.cu  CountingSort_Texture.cu
src/CUDA_counting_sort/Misurazioni_Counting_Sort/: CS_measure_33554432.xlsx
src/CUDA_counting_sort/Misurazioni_Counting_Sort/global/: CS_global_CountingSort_33554432_v_104_b_256_tpb.csv  CS_global_CountingSort_33554432_v_13312_b_2_tpb.csv  CS_global_CountingSort_33554432_v_1664_b_16_tpb.csv  CS_global_CountingSort_33554432_v_208_b_128_tpb.csv  CS_global_CountingSort_33554432_v_3328_b_8_tpb.csv  CS_global_CountingSort_33554432_v_416_b_64_tpb.csv  CS_global_CountingSort_33554432_v_52_b_512_tpb.csv  CS_global_CountingSort_33554432_v_6656_b_4_tpb.csv  CS_global_CountingSort_33554432_v_832_b_32_tpb.csv
src/CUDA_counting_sort/Misurazioni_Counting_Sort/shared/: CS_shared_CountingSort_33554432_v_104_b_256_tpb.csv  CS_shared_CountingSort_33554432_v_13312_b_2_tpb.csv  CS_shared_CountingSort_33554432_v_1664_b_16_tpb.csv  CS_shared_CountingSort_33554432_v_208_b_128_tpb.csv  CS_shared_CountingSort_33554432_v_3328_b_8_tpb.csv  CS_shared_CountingSort_33554432_v_416_b_64_tpb.csv  CS_shared_CountingSort_33554432_v_52_b_512_tpb.csv  CS_shared_CountingSort_33554432_v_6656_b_4_tpb.csv  CS_shared_CountingSort_33554432_v_832_b_32_tpb.csv
src/CUDA_counting_sort/Misurazioni_Counting_Sort/texture/: CS_texture_CountingSort_33554432_v_104_b_256_tpb.csv  CS_texture_CountingSort_33554432_v_13312_b_2_tpb.csv  CS_texture_CountingSort_33554432_v_1664_b_16_tpb.csv  CS_texture_CountingSort_33554432_v_208_b_128_tpb.csv  CS_texture_CountingSort_33554432_v_3328_b_8_tpb.csv  CS_texture_CountingSort_33554432_v_416_b_64_tpb.csv  CS_texture_CountingSort_33554432_v_52_b_512_tpb.csv  CS_texture_CountingSort_33554432_v_6656_b_4_tpb.csv  CS_texture_CountingSort_33554432_v_832_b_32_tpb.csv
src/CUDA_counting_sort/Misurazioni_Counting_Sort/texture_shared/: CS_shared_texture_CountingSort_33554432_v_104_b_256_tpb.csv  CS_shared_texture_CountingSort_33554432_v_13312_b_2_tpb.csv  CS_shared_texture_CountingSort_33554432_v_1664_b_16_tpb.csv  CS_shared_texture_CountingSort_33554432_v_208_b_128_tpb.csv  CS_shared_texture_CountingSort_33554432_v_3328_b_8_tpb.csv  CS_shared_texture_CountingSort_33554432_v_416_b_64_tpb.csv  CS_shared_texture_CountingSort_33554432_v_52_b_512_tpb.csv  CS_shared_texture_CountingSort_33554432_v_6656_b_4_tpb.csv  CS_shared_texture_CountingSort_33554432_v_832_b_32_tpb.csv
src/MPI_counting_sort/: CMakeLists.txt  file.bash  parallel.c  sequential.c
src/OMP_counting_sort/: CMakeLists.txt  estrai.py  file.bash  main.c
src/OMP_counting_sort/test/: main.c
